--- a/primax_packages/wdcore_avatar/etc/avahi/services/web.service
+++ b/primax_packages/wdcore_avatar/etc/avahi/services/web.service
@@ -11,7 +11,7 @@
         <txt-record>modelName=My Passport Wireless</txt-record>
         <txt-record>modelDescription=My Passport Wireless Portable Storage</txt-record>
         <txt-record>modelURL=http://products.wd.com/MyPassportWireless</txt-record>
-        <txt-record>modelNumber=WDBK8Z</txt-record>
-        <txt-record>serialNumber=WX11E83D8553</txt-record>
+        <txt-record>modelNumber=AV1W</txt-record>
+        <txt-record>serialNumber=WDAvatarSerialNumber</txt-record>
     </service>
 </service-group>
