import: buildroot-GPL_1_03_13.tgz
Origin: http://downloads.wdc.com/gpl/buildroot-GPL_1_03_13.tgz

--- a/FWupg.config
+++ b/FWupg.config
@@ -1029,6 +1029,8 @@ BR2_PACKAGE_ZLIB=y
 # WD packages
 #
 # BR2_PACKAGE_WDPACKAGE_BASIC is not set
+# BR2_PACKAGE_PARAGON_UFSD is not set
+# BR2_PACKAGE_PARAGON_TOOLS is not set
 
 #
 # Primax packages
@@ -1042,6 +1044,7 @@ BR2_PACKAGE_PMXPACKAGE_MCU_DAEMON=y
 # BR2_PACKAGE_PMXPACKAGE_HIDDENFILE is not set
 # BR2_PACKAGE_PMXPACKAGE_DEFAULTSETTINGS is not set
 BR2_PACKAGE_PMXPACKAGE_FWUPG=y
+# BR2_PACKAGE_PMXPACKAGE_FILECACHE is not set
 
 #
 # Host utilities
