--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-svn39-dirty Configuration
+# Buildroot 2013.05-svn183-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -1348,6 +1348,7 @@ BR2_PACKAGE_PMXPACKAGE_SCSIGETCID=y
 BR2_PACKAGE_PMXPACKAGE_HIDDENFILE=y
 BR2_PACKAGE_PMXPACKAGE_DEFAULTSETTINGS=y
 # BR2_PACKAGE_PMXPACKAGE_FWUPG is not set
+# BR2_PACKAGE_PMXPACKAGE_FILECACHE is not set
 
 #
 # Host utilities
