import: GPL-v1_04_06-20150605.zip
Origin: http://downloads.wdc.com/gpl/GPL-v1_04_06-20150605.zip

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-svn183-dirty Configuration
+# Buildroot 2013.05-svn236-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -1068,6 +1068,7 @@ BR2_PACKAGE_LLD2D=y
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MII_DIAG is not set
+# BR2_PACKAGE_MINIDLNA is not set
 # BR2_PACKAGE_MONGOOSE is not set
 # BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
