--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-svn236-dirty Configuration
+# Buildroot 2013.05-svn261-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -351,10 +351,33 @@ BR2_PACKAGE_BINUTILS_TARGET=y
 # BR2_PACKAGE_CIFS_UTILS is not set
 # BR2_PACKAGE_CRAMFS is not set
 # BR2_PACKAGE_CURLFTPFS is not set
-# BR2_PACKAGE_DOSFSTOOLS is not set
-# BR2_PACKAGE_E2FSPROGS is not set
+BR2_PACKAGE_DOSFSTOOLS=y
+# BR2_PACKAGE_DOSFSTOOLS_MKDOSFS is not set
+# BR2_PACKAGE_DOSFSTOOLS_DOSFSCK is not set
+# BR2_PACKAGE_DOSFSTOOLS_DOSFSLABEL is not set
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_BADBLOCKS=y
+BR2_PACKAGE_E2FSPROGS_CHATTR=y
+# BR2_PACKAGE_E2FSPROGS_DEBUGFS is not set
+BR2_PACKAGE_E2FSPROGS_DUMPE2FS=y
+BR2_PACKAGE_E2FSPROGS_E2FREEFRAG=y
+BR2_PACKAGE_E2FSPROGS_E2FSCK=y
+# BR2_PACKAGE_E2FSPROGS_E2IMAGE is not set
+BR2_PACKAGE_E2FSPROGS_E2LABEL=y
+BR2_PACKAGE_E2FSPROGS_E2UNDO=y
+# BR2_PACKAGE_E2FSPROGS_E4DEFRAG is not set
+BR2_PACKAGE_E2FSPROGS_FILEFRAG=y
+BR2_PACKAGE_E2FSPROGS_FINDFS=y
+BR2_PACKAGE_E2FSPROGS_FSCK=y
+BR2_PACKAGE_E2FSPROGS_LOGSAVE=y
+BR2_PACKAGE_E2FSPROGS_LSATTR=y
+BR2_PACKAGE_E2FSPROGS_MKE2FS=y
+BR2_PACKAGE_E2FSPROGS_MKLOSTFOUND=y
+# BR2_PACKAGE_E2FSPROGS_RESIZE2FS is not set
+BR2_PACKAGE_E2FSPROGS_TUNE2FS=y
+BR2_PACKAGE_E2FSPROGS_UUIDGEN=y
 # BR2_PACKAGE_EXFAT is not set
-# BR2_PACKAGE_EXFAT_UTILS is not set
+BR2_PACKAGE_EXFAT_UTILS=y
 # BR2_PACKAGE_F2FS_TOOLS is not set
 # BR2_PACKAGE_FLASHBENCH is not set
 # BR2_PACKAGE_GENEXT2FS is not set
@@ -403,7 +426,9 @@ BR2_PACKAGE_MTD_UBIRMVOL=y
 BR2_PACKAGE_MTD_UBIRSVOL=y
 BR2_PACKAGE_MTD_UBIUPDATEVOL=y
 # BR2_PACKAGE_NFS_UTILS is not set
-# BR2_PACKAGE_NTFS_3G is not set
+BR2_PACKAGE_NTFS_3G=y
+# BR2_PACKAGE_NTFS_3G_ENCRYPTED is not set
+BR2_PACKAGE_NTFS_3G_NTFSPROGS=y
 # BR2_PACKAGE_SQUASHFS is not set
 # BR2_PACKAGE_SSHFS is not set
 # BR2_PACKAGE_UNIONFS is not set
