avatar: config: Add transmission
Signed-off-by: RzR <rzr@users.sf.net>

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00012-g410a566 Configuration
+# Buildroot 2013.05-00019-g94b60f5 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -961,7 +961,7 @@ BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_LIBCAP_NG is not set
 BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBELF is not set
-# BR2_PACKAGE_LIBEVENT is not set
+BR2_PACKAGE_LIBEVENT=y
 # BR2_PACKAGE_LIBEV is not set
 BR2_PACKAGE_LIBFFI=y
 # BR2_PACKAGE_LIBGLIB2 is not set
@@ -1226,7 +1226,11 @@ BR2_PACKAGE_TCPDUMP_SMB=y
 # BR2_PACKAGE_THTTPD is not set
 # BR2_PACKAGE_TINYHTTPD is not set
 # BR2_PACKAGE_TN5250 is not set
-# BR2_PACKAGE_TRANSMISSION is not set
+BR2_PACKAGE_TRANSMISSION=y
+BR2_PACKAGE_TRANSMISSION_UTP=y
+BR2_PACKAGE_TRANSMISSION_CLI=y
+BR2_PACKAGE_TRANSMISSION_DAEMON=y
+BR2_PACKAGE_TRANSMISSION_REMOTE=y
 # BR2_PACKAGE_TVHEADEND is not set
 # BR2_PACKAGE_UDPCAST is not set
 # BR2_PACKAGE_ULOGD is not set
