avatar: Add screen etc
Signed-off-by: RzR <rzr@users.sf.net>

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-svn261-dirty Configuration
+# Buildroot 2013.05-00012-g410a566 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -198,8 +198,25 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_AUMIX is not set
 # BR2_PACKAGE_BELLAGIO is not set
 # BR2_PACKAGE_FAAD2 is not set
-# BR2_PACKAGE_FLAC is not set
-# BR2_PACKAGE_FFMPEG is not set
+BR2_PACKAGE_FLAC=y
+BR2_PACKAGE_FFMPEG=y
+# BR2_PACKAGE_FFMPEG_GPL is not set
+# BR2_PACKAGE_FFMPEG_NONFREE is not set
+BR2_PACKAGE_FFMPEG_FFMPEG=y
+# BR2_PACKAGE_FFMPEG_FFPLAY is not set
+# BR2_PACKAGE_FFMPEG_FFSERVER is not set
+BR2_PACKAGE_FFMPEG_SWSCALE=y
+BR2_PACKAGE_FFMPEG_ENCODERS="all"
+BR2_PACKAGE_FFMPEG_DECODERS="all"
+BR2_PACKAGE_FFMPEG_MUXERS="all"
+BR2_PACKAGE_FFMPEG_DEMUXERS="all"
+BR2_PACKAGE_FFMPEG_PARSERS="all"
+BR2_PACKAGE_FFMPEG_BSFS="all"
+BR2_PACKAGE_FFMPEG_PROTOCOLS="all"
+BR2_PACKAGE_FFMPEG_FILTERS="all"
+BR2_PACKAGE_FFMPEG_INDEVS=y
+BR2_PACKAGE_FFMPEG_OUTDEVS=y
+BR2_PACKAGE_FFMPEG_EXTRACONF=""
 # BR2_PACKAGE_GSTREAMER is not set
 # BR2_PACKAGE_LAME is not set
 # BR2_PACKAGE_MADPLAY is not set
@@ -707,14 +724,14 @@ BR2_PACKAGE_PYTHON_HASHLIB=y
 # BR2_PACKAGE_LIBCDAUDIO is not set
 # BR2_PACKAGE_LIBCUE is not set
 # BR2_PACKAGE_LIBCUEFILE is not set
-# BR2_PACKAGE_LIBID3TAG is not set
+BR2_PACKAGE_LIBID3TAG=y
 # BR2_PACKAGE_LIBLO is not set
 # BR2_PACKAGE_LIBMAD is not set
 # BR2_PACKAGE_LIBMPD is not set
 # BR2_PACKAGE_LIBREPLAYGAIN is not set
 # BR2_PACKAGE_LIBSAMPLERATE is not set
 # BR2_PACKAGE_LIBSNDFILE is not set
-# BR2_PACKAGE_LIBVORBIS is not set
+BR2_PACKAGE_LIBVORBIS=y
 # BR2_PACKAGE_OPUS is not set
 # BR2_PACKAGE_PORTAUDIO is not set
 # BR2_PACKAGE_SPEEX is not set
@@ -789,7 +806,7 @@ BR2_PACKAGE_LIBFUSE=y
 # BR2_PACKAGE_LCMS2 is not set
 # BR2_PACKAGE_LIBART is not set
 # BR2_PACKAGE_LIBDMTX is not set
-# BR2_PACKAGE_LIBEXIF is not set
+BR2_PACKAGE_LIBEXIF=y
 # BR2_PACKAGE_LIBGEOTIFF is not set
 # BR2_PACKAGE_GDK_PIXBUF is not set
 # BR2_PACKAGE_LIBPNG is not set
@@ -864,7 +881,7 @@ BR2_PACKAGE_LIBFUSE=y
 # BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
-# BR2_PACKAGE_LIBOGG is not set
+BR2_PACKAGE_LIBOGG=y
 # BR2_PACKAGE_LIBPLAYER is not set
 # BR2_PACKAGE_LIBTHEORA is not set
 # BR2_PACKAGE_LIVE555 is not set
@@ -910,7 +927,7 @@ BR2_PACKAGE_LIBPCAP=y
 # BR2_PACKAGE_LIBRSYNC is not set
 # BR2_PACKAGE_LIBSOUP is not set
 # BR2_PACKAGE_LIBTIRPC is not set
-# BR2_PACKAGE_LIBTORRENT is not set
+BR2_PACKAGE_LIBTORRENT=y
 BR2_PACKAGE_LIBUPNP=y
 # BR2_PACKAGE_LIBVNCSERVER is not set
 # BR2_PACKAGE_LIBWEBSOCKETS is not set
@@ -952,7 +969,7 @@ BR2_PACKAGE_LIBFFI=y
 # BR2_PACKAGE_LIBNSPR is not set
 # BR2_PACKAGE_LIBPFM4 is not set
 # BR2_PACKAGE_LIBPTHSEM is not set
-# BR2_PACKAGE_LIBSIGC is not set
+BR2_PACKAGE_LIBSIGC=y
 # BR2_PACKAGE_LIBSIGSEGV is not set
 # BR2_PACKAGE_LIBTASN1 is not set
 # BR2_PACKAGE_LIBTPL is not set
@@ -1091,9 +1108,9 @@ BR2_PACKAGE_LIGHTTPD_PCRE=y
 # BR2_PACKAGE_LINPHONE is not set
 BR2_PACKAGE_LLD2D=y
 # BR2_PACKAGE_LRZSZ is not set
-# BR2_PACKAGE_MACCHANGER is not set
+BR2_PACKAGE_MACCHANGER=y
 # BR2_PACKAGE_MII_DIAG is not set
-# BR2_PACKAGE_MINIDLNA is not set
+BR2_PACKAGE_MINIDLNA=y
 # BR2_PACKAGE_MONGOOSE is not set
 # BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
@@ -1139,7 +1156,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_RPCBIND is not set
 # BR2_PACKAGE_RSH_REDONE is not set
 BR2_PACKAGE_RSYNC=y
-# BR2_PACKAGE_RTORRENT is not set
+BR2_PACKAGE_RTORRENT=y
 BR2_PACKAGE_SAMBA=y
 BR2_PACKAGE_SAMBA_MAX_DEBUGLEVEL=-1
 
@@ -1219,7 +1236,7 @@ BR2_PACKAGE_TCPDUMP_SMB=y
 # BR2_PACKAGE_VPNC is not set
 BR2_PACKAGE_VSFTPD=y
 # BR2_PACKAGE_VTUN is not set
-# BR2_PACKAGE_WGET is not set
+BR2_PACKAGE_WGET=y
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 BR2_PACKAGE_WIRELESS_TOOLS=y
 # BR2_PACKAGE_WIRELESS_TOOLS_LIB is not set
@@ -1265,7 +1282,7 @@ BR2_PACKAGE_FILE=y
 # BR2_PACKAGE_LOCKFILE_PROGS is not set
 BR2_PACKAGE_LOGROTATE=y
 # BR2_PACKAGE_LOGSURFER is not set
-# BR2_PACKAGE_SCREEN is not set
+BR2_PACKAGE_SCREEN=y
 BR2_PACKAGE_SHADOW=y
 BR2_PACKAGE_SUDO=y
 # BR2_PACKAGE_TIME is not set
