--- a/fwconfigs/FWupg/FWupg.config
+++ b/fwconfigs/FWupg/FWupg.config
@@ -1096,11 +1096,11 @@ BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_CUSTOM_VERSION is not set
-BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-# BR2_LINUX_KERNEL_CUSTOM_GIT is not set
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="linux-3.2.0-psp04.06.00.11.tgz"
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="https://github.com/rzr/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="am33x/devel"
 BR2_LINUX_KERNEL_VERSION="custom"
-BR2_LINUX_KERNEL_PATCH="fwupg_patch/source_patch_dir/linux-primaxboard.patch"
+# BR2_LINUX_KERNEL_PATCH="fwupg_patch/source_patch_dir/linux-primaxboard.patch"
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
 BR2_LINUX_KERNEL_DEFCONFIG="am335x_fwupdate"
