WIP: mod: .config (avatar/devel)
Signed-off-by: RzR <rzr@users.sf.net>

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00019-g94b60f5 Configuration
+# Buildroot 2013.05-00025-g96afde9-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -1481,11 +1481,12 @@ BR2_TARGET_UBOOT_SPL_NAME="MLO"
 BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_CUSTOM_VERSION is not set
-BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-# BR2_LINUX_KERNEL_CUSTOM_GIT is not set
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="linux-3.2.0-psp04.06.00.11.tgz"
-BR2_LINUX_KERNEL_VERSION="custom"
-BR2_LINUX_KERNEL_PATCH="primax_patch/source_patch_dir/linux-primaxboard.patch"
+# BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="https://github.com/rzr/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="am33x/devel"
+BR2_LINUX_KERNEL_VERSION="am33x/devel"
+BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
 BR2_LINUX_KERNEL_DEFCONFIG="am335x_evm"
